--- a/webpage/style.css
+++ b/webpage/style.css
@@ -41,7 +41,7 @@ font-family: mv boli;
 
 }
 ul{
-   margin-top: auto;
+   margin-top: 10%;
    float: right;
    list-style: none;
    margin-top: 25px;
@@ -53,6 +53,7 @@ display: inline;
 }
 
 ul li a{
+top: 10%;
 text-decoration: none;
 color: rgb(19, 1, 1);
 padding: 5px 20px;
@@ -81,15 +82,16 @@ height: auto;
 
 }
 .button{
+   
    position: absolute;
    top: 50%;
    left: 80%;
    transform: translate(10%,10%);
 }
 .btn{
-   border:  2px solid rgba(253, 252, 252, 0.945);
+   border:  2px solid rgba(243, 8, 8, 0);
    padding: 10px 30px;
-   colour: #fff;
+   color: #fff;
    text-decoration-color: indianred ;
    transition: 0.6s ease;
 }
