--- a/webpage/about.css
+++ b/webpage/about.css
@@ -1,46 +1,102 @@
 *{
-   margin: 0;
-   padding: 0;
-   font-family: cursive ;
-}
-header{ 
-    background-color: lavender;
-    background-image: url("kid.jpg");
-    background-repeat: no-repeat;
-    background-position: right top;
-    background-attachment: fixed;
-    height: 50%;
-  
+    margin: 0;
+    padding: 0;
+    font-family: cursive ;
+ }
+ 
+ #section1{
+    height: 100vh;
+    width: 100%;
+    img:url("messi-gol-gif.gif");
     background-size: cover;
-    background-position: center;
+    position: relative;
+    background-attachment: fixed;
+ }
+ #section2{
+    height: 100vh;
+    width: 100%;
+    background-image:url("Arg.jpg");
+    background-size: cover;
+    position: relative;
+    background-attachment: fixed;
+ }
+ #section3{
+    height: 100vh;
+    width: 100%;
+    background-image:url("lm10.jpg");
+    background-size: cover;
+    position: relative;
+    background-attachment: fixed;
+ 
+ }
+ 
+ h1{
+ position: absolute;
+ top: 50%;
+ left: 10%;
+ transform: translate(-50%,-50%);
+ color: rgb(39, 4, 4);
+ font-size: 50px;
+ font-family: mv boli;
+ 
  }
  ul{
+    margin-top: 10%;
     float: right;
-    list-style-type: inherit;
+    list-style: none;
     margin-top: 25px;
  }
-
+ 
  ul li{
-display: inline;
-
+ display: inline;
+ 
  }
-
+ 
  ul li a{
-text-decoration: none;
-color: skyblue;
-padding: 5px 20px;
-border: 2px solid purple  ;
-transition: 0.6s ease;
-}
-ul li a:hover
-{
+ top: 10%;
+ text-decoration: none;
+ color: rgb(19, 1, 1);
+ padding: 5px 20px;
+ border: 2px solid purple transparent  ;
+ transition: 0.6s ease;
+ }
+ ul li a:hover
+ {
    background-color: #fff;
    color: rgb(221, 173, 40);
     
-}
-.logo img{
-float: left;
-width: 100px;
-height: auto;
-}
-
+ }
+ 
+ 
+  
+ .logo img{
+ float: left;
+ width: 100px;
+ height: auto;
+ }
+ 
+ .main
+ {
+    max-width: 1200px;
+    margin: auto ;
+ 
+ }
+ .button{
+    
+    position: absolute;
+    top: 50%;
+    left: 80%;
+    transform: translate(10%,10%);
+ }
+ .btn{
+    border:  2px solid rgb(221, 212, 212);
+    padding: 10px 30px;
+    color: #fff;
+    text-decoration-color: indianred ;
+    transition: 0.6s ease;
+ }
+ .btn:hover{
+    
+    background-color: #fff;
+    color: rgb(221, 173, 40);
+ }
