--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ height: auto;
 .btn{
    border:  2px solid rgba(253, 252, 252, 0.945);
    padding: 10px 30px;
-   colour: #fff;
+   color: #fff;
    text-decoration-color: indianred ;
    transition: 0.6s ease;
 }
