--- a/webpage/about.css
+++ b/webpage/about.css
@@ -3,72 +3,37 @@
     padding: 0;
     font-family: cursive ;
  }
+ header{ 
+     background-image:url("messinio.jpg");
+     height: 100vh;
+   
+     background-size: cover;
+     background-position: center;
+  }
+  ul{
+     float: right;
+     list-style-type: inherit;
+     margin-top: 25px;
+  }
  
- #section1{
-    height: 100vh;
-    width: 100%;
-    img:url("messi-gol-gif.gif");
-    background-size: cover;
-    position: relative;
-    background-attachment: fixed;
- }
- #section2{
-    height: 100vh;
-    width: 100%;
-    background-image:url("Arg.jpg");
-    background-size: cover;
-    position: relative;
-    background-attachment: fixed;
- }
- #section3{
-    height: 100vh;
-    width: 100%;
-    background-image:url("lm10.jpg");
-    background-size: cover;
-    position: relative;
-    background-attachment: fixed;
- 
- }
- 
- h1{
- position: absolute;
- top: 50%;
- left: 10%;
- transform: translate(-50%,-50%);
- color: rgb(39, 4, 4);
- font-size: 50px;
- font-family: mv boli;
- 
- }
- ul{
-    margin-top: 10%;
-    float: right;
-    list-style: none;
-    margin-top: 25px;
- }
- 
- ul li{
+  ul li{
  display: inline;
  
- }
+  }
  
- ul li a{
- top: 10%;
+  ul li a{
  text-decoration: none;
- color: rgb(19, 1, 1);
+ color: skyblue;
  padding: 5px 20px;
- border: 2px solid purple transparent  ;
+ border: 2px solid purple  ;
  transition: 0.6s ease;
  }
  ul li a:hover
  {
-   background-color: #fff;
-   color: rgb(221, 173, 40);
-    
+    background-color: #fff;
+    color: rgb(221, 173, 40);
+     
  }
- 
- 
-  
  .logo img{
  float: left;
  width: 100px;
@@ -78,18 +43,17 @@
  .main
  {
     max-width: 1200px;
-    margin: auto ;
+    margin-top: 20px;
  
  }
  .button{
-    
     position: absolute;
     top: 50%;
     left: 80%;
     transform: translate(10%,10%);
  }
  .btn{
-    border:  2px solid rgb(221, 212, 212);
+    border:  2px solid rgba(253, 252, 252, 0.945);
     padding: 10px 30px;
     color: #fff;
     text-decoration-color: indianred ;
