--- a/webpage/ab.css
+++ b/webpage/ab.css
@@ -1,17 +1,125 @@
 *{
-    margin 0;
+    margin 1;
     padding: 0;
     font-family: sans-serif;
 
 
 }
 .container{
+    background-image: url("344771.jpg");
     width: 100%;
     height: 100vh;
-    background-image: url("m.jpg");
+   
     background-position: center;
     background-size: cover;
     position: relative;
+    opacity: 70%;
+    padding: 30px;
+    box-sizing: border-box;
+
+}
+
+.logo{
+width: 155px;
+}
+
+.logo img{
+    width: 50px;
+    position: relative;
+    z-index: 10;
+    cursor: pointer;
 
 
+}
+.msg-container{
+    width: 600px;
+    height: 280px;
+    position: absolute;
+    right: -20%;
+    top: 10%;
+    transform: translate(-50%);
+    overflow-wrap: break-word;
+
+     
+
+}
+
+}
+.msg-col{
+    width: 600px;
+    height: 280px;
+}
+.msg-col h1{
+    color: rgb(14, 0, 0);
+    font-size: 80px;
+    font-weight: 100;
+    margin: 10px 0;
+}
+
+.msg-col p{
+    color: rgb(14, 1, 1);
+    font-size: 15px;
+    line-height: 25px;
+
+}
+
+.msg-col a{
+    display: inline-block;
+    text-decoration: none;
+    color: rgb(243, 13, 13);
+    background: rgb(7, 0, 0);
+    font-size: 15px;
+    padding: 10px 35px;
+    border-radius:30px;
+    margin: 25px;
+}
+.container1{
+    background-color: rgb(110, 109, 109);
+    background-image: url("family.jpeg");
+    width: 100%;
+    height: 100vh;
+   
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    opacity: 100%;
+    padding: 30px;
+    box-sizing: border-box;
+}
+.msg-container1{
+    width: 600px;
+    height: 280px;
+    position: absolute;
+    left: 20%;
+    top: 10%;
+    transform: translate(-50%);
+    overflow-wrap: break-word;
+}
+.msg-col1{
+    width: 600px;
+    height: 280px;
+}
+.msg-col1 h1{
+    color: rgb(14, 0, 0);
+    font-size: 80px;
+    font-weight: 100;
+    margin: 10px 0;
+}
+
+.msg-col1 p{
+    color: rgb(14, 1, 1);
+    font-size: 15px;
+    line-height: 25px;
+
+}
+
+.msg-col1 a{
+    display: inline-block;
+    text-decoration: none;
+    color: rgb(243, 13, 13);
+    background: rgb(7, 0, 0);
+    font-size: 15px;
+    padding: 10px 35px;
+    border-radius:30px;
+    margin: 25px;
 }
